# pydigi

./: .gitignore  API_STANDARD.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  PROJECT_TRACKER.md  QUICKSTART.md  README.md  RELEASING.md  fldigi_opmode_menu.html  generate_markdown_wefax.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
dev_archive/: api_standard.md  dsp_improvements.md  implementation_summary.md  psk_debug_notes.md
dev_archive/dev/: contributing.md  project_tracker.md
dev_archive/mode_guides/: hell.md  mfsk.md  other.md  rtty.md
dev_archive/tools/: signal_analyzer.md  signal_analyzer_guide.md  signal_analyzer_quick_ref.md
docs/: 8psk_fix_summary.md  api_standardization_summary.md  contributing.md  current_status.md  index.md  installation.md  project_status.md  quickstart.md  readme.md  why_different_approaches.md
docs/api/: audio.md  dsp.md  modems.md  overview.md
docs/arq/: CHANGELOG.md  DEPENDENCIES.md  README.md  overview.md  protocol_reference.md  testing_guide.md
docs/dev/: architecture.md
docs/examples/: advanced.md  basic.md  gnuradio.md  navtex.md  wefax.md
docs/guides/: decoders.md  frequency-estimation.md  psk-decoder-old.md  signal-detection-old.md  signal-detection.md
docs/modems/: cw.md  ofdm.md  psk.md
docs/tools/: signal_analyzer_summary.md
examples/: arq_loopback_test.py  auto_detect_psk.py  cw_example.py  decode_psk_wav.py  dominoex_example.py  fsq_example.py  hell_example.py  mfsk_example.py  mfsk_extended_example.py  navtex_example.py  olivia_contestia_example.py  psk8_fec_example.py  psk_example.py  psk_extended_example.py  pskr_example.py  qpsk_psk8_example.py  resampler_example.py  rtty_example.py  signal_analyzer_example.py  thor_example.py  throb_example.py  wefax_example.py
pydigi/: __init__.py
pydigi/arq/: __init__.py  blocks.py  config.py  crc.py  exceptions.py  frame.py  protocol.py  state_machine.py
pydigi/core/: __init__.py  dsp_utils.py  encoder.py  fft.py  fht.py  filters.py  freq_estimators.py  golay.py  interleave.py  mfsk_encoder.py  mfsk_modulator.py  mt63_data.py  mt63_filters.py  oscillator.py  signal_detector.py
pydigi/fonts/: __init__.py
pydigi/modems/: __init__.py  base.py  contestia.py  cw.py  dominoex.py  fsq.py  hell.py  ifkp.py  mfsk.py  mt63.py  navtex.py  olivia.py  psk.py  psk8.py  psk8_fec.py  psk_decoder.py  psk_extended.py  qpsk.py  rtty.py  scamp.py  thor.py  throb.py  wefax.py
pydigi/utils/: __init__.py  audio.py  constants.py  markdown_renderer.py  resampler.py  signal_analyzer.py  text_renderer.py
pydigi/varicode/: __init__.py  baudot.py  dominoex_varicode.py  feld_font.py  fsq_varicode.py  mfsk_varicode.py  navtex_varicode.py  psk_varicode.py  scamp_varicode.py  thor_varicode.py  (+1 more)
(+32 files in other folders)
